Add --add-opens JVM args to surefire/failsafe for Java 25
Java 25 enforces module boundaries more strictly, causing tests that use
reflection (Mockito, Spring, Hibernate) to fail without --add-opens args.
Add a new AddSurefireArgLine recipe that merges --add-opens arguments
into the argLine configuration of maven-surefire-plugin and
maven-failsafe-plugin, and wire it into UpgradePluginsForJava25.

The recipe handles plugins with no configuration, existing configuration
without argLine, and existing argLine values (merging without duplicates).

Fixes moderneinc/customer-requests#1821